force-app/main/default/objects/Contact/fields/Registered_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Registered_Account_Number__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Account Number</label>
    <type>Text</type>
</CustomField>