force-app/main/default/objects/Contact/fields/Total_Number_of_Orders_Placed__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Orders_Placed__c</fullName>
    <label>Total Number of Orders Placed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>