force-app/main/default/objects/Contact/fields/Wallet_Amount__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Amount__c</fullName>
    <label>Wallet Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>